2014-03-26 David Cote <david.cote@cern.ch>
	* Added ERROR message when high==low in sample.addOveralSys().
	  Otherwise, HistFactory seems to do something like error=(high-low)/(high+low),
	  which silently cancels the error.

2014-03-21 David Cote <david.cote@cern.ch>
	* Made plotRatio of type string (instead of bool) and configurable via configMgr, with options: "ratio", "pull, "none"
	* Implemented plotRatio=="none" case in Utils.cxx

2014-03-07 Jeanette Miriam Lorenz <jeanette.miriam.lorenz@cern.ch>
       * analysis/batchjobs/HypoTest.py: update for -l to reflect changes in src/ConfigMgr.cxx for upper limits (-l)

2014-03-04 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* src/StatTools.cxx: don't exit(1) in get_Pvalue when sampling
	distribution is empty, but return a dummy result 
	
2014-02-25 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* src/toy_utils.cxx: replace hypo_discovery with fitTo properly

2014-02-24 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* src/ConfigMgr.cxx: change name of -z hypotests to hypo_discovery_*
	rather than hypo_* to 
	* scripts/HistFitter.py: allow use of -p -z simultaneously

2014-02-18 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* Tagging HistFitter-00-00-38

2014-02-05 Max Baak
	M       prepareHistos.py
	* patch for qcd histograms generation to use tree prepare fallback.

2014-01-29 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* Allow HistoPrepare to fall back to TreePrepare for missing histograms in
	  either of the cache files

2014-01-29 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* ConfigManager.cxx: protect null ptr
	* StatTools.cxx: MakeUpperLimitPlot() uses ExclusionCleanup() too

2014-01-28 Max Baak <mbaak@cern.ch>
	* The fix for userNormHistoSys is in, hence tagging HistFitter-00-00-37

2014-01-28 Alex Koutsman <koutsman@cern.ch>
	U python/configManager.py